<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="reminder_notification_enabled"
        android:title="@string/dialog_enabled" />
    <EditTextPreference
        android:defaultValue="5"
        android:dependency="reminder_notification_enabled"
        android:inputType="number"
        android:key="time_until_notification"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:title="@string/notification_setting_title" />

    <EditTextPreference
        android:dependency="reminder_notification_enabled"
        android:key="custom_reminder_text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/custom_text_setting_title" />
</PreferenceScreen>
